<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.autorus.ui.home.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_partFragment"
            app:destination="@id/partFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.autorus.ui.cart.fragment.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_cart_to_partFragment"
            app:destination="@id/partFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.autorus.ui.profile.fragment.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >

    </fragment>
    <fragment
        android:id="@+id/partFragment"
        android:name="com.example.autorus.ui.part.fragment.PartFragment"
        android:label="fragment_part"
        tools:layout="@layout/fragment_part" />
</navigation>